unifi/unifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: network
  labels:
    app: unifi 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: unifi 
  template:
    metadata:
      labels:
        app: unifi 
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role
                operator: In
                values:
                - database
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "database"
        effect: "NoSchedule"
      volumes:
      - name: unifi-config 
        persistentVolumeClaim:
          claimName: unifi-pvc 
      containers:
      - name: unifi 
        image: linuxserver/unifi-network-application:latest 
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3478
            protocol: UDP
          - containerPort: 10001
            protocol: UDP
          - containerPort: 5514
            protocol: UDP
          - containerPort: 8080
          - containerPort: 8081
          - containerPort: 8443
          - containerPort: 8843
          - containerPort: 8880
          - containerPort: 6789
        volumeMounts:
        - name: unifi-config
          mountPath: /config
